@startuml
class com.dutianze.designpattern.behavioral.composite.letter.Letter {
- char character
# void printThisBefore()
}
class com.dutianze.designpattern.behavioral.composite.letter.Word {
# void printThisBefore()
}
class com.dutianze.designpattern.behavioral.composite.letter.Sentence {
# void printThisAfter()
}
abstract class com.dutianze.designpattern.behavioral.composite.LetterComposite {
- List<LetterComposite> children
+ void add(LetterComposite)
+ int count()
# void printThisBefore()
# void printThisAfter()
+ void print()
}


com.dutianze.designpattern.behavioral.composite.LetterComposite <|-- com.dutianze.designpattern.behavioral.composite.letter.Letter
com.dutianze.designpattern.behavioral.composite.LetterComposite <|-- com.dutianze.designpattern.behavioral.composite.letter.Word
com.dutianze.designpattern.behavioral.composite.LetterComposite <|-- com.dutianze.designpattern.behavioral.composite.letter.Sentence
@enduml